fixed wrap btn

--- a/src/scss/partials/_section-two.scss
+++ b/src/scss/partials/_section-two.scss
@@ -222,7 +222,7 @@
     transition: width .2s;
 
     .description__more {
-      z-index: 2;
+      z-index: 4;
       position: absolute;
       width: 50px;
       height: 50px;
